typed client generation
