# example/Application.Web.Api.Client/swagger.json
@@ -1,6 +1,11 @@
-// GENERATED BY IntegrationTests.CreateSwaggerJsonTest
+//----------------------
+// <auto-generated>
+//     Generated by IntegrationTest.EndpointTests.CreateSwaggerJsonTest
+// </auto-generated>
+//----------------------
+
 {
-  "x-generator": "NSwag v13.7.0.0 (NJsonSchema v10.1.24.0 (Newtonsoft.Json v10.0.0.0))",
+  "x-generator": "NSwag v13.7.0.0 (NJsonSchema v10.1.26.0 (Newtonsoft.Json v10.0.0.0))",
   "swagger": "2.0",
   "info": {
     "title": "My Title",
@@ -11,129 +16,12 @@
     "http"
   ],
   "paths": {
-    "/api/users": {
-      "get": {
-        "tags": [
-          "User"
-        ],
-        "operationId": "User_GetAll",
-        "produces": [
-          "text/plain",
-          "application/json",
-          "text/json"
-        ],
-        "responses": {
-          "200": {
-            "x-nullable": false,
-            "description": "",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/User"
-              }
-            }
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "User"
-        ],
-        "operationId": "User_Post",
-        "consumes": [
-          "application/json",
-          "text/json",
-          "application/*+json"
-        ],
-        "parameters": [
-          {
-            "name": "command",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/UserCreateCommand"
-            },
-            "x-nullable": false
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/api/users/{userId}": {
-      "get": {
-        "tags": [
-          "User"
-        ],
-        "operationId": "User_Get",
-        "produces": [
-          "text/plain",
-          "application/json",
-          "text/json"
-        ],
-        "parameters": [
-          {
-            "type": "string",
-            "name": "userId",
-            "in": "path",
-            "required": true,
-            "x-nullable": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "x-nullable": false,
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "User"
-        ],
-        "operationId": "User_Put",
-        "consumes": [
-          "application/json",
-          "text/json",
-          "application/*+json"
-        ],
-        "parameters": [
-          {
-            "name": "command",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/UserUpdateCommand"
-            },
-            "x-nullable": false
-          },
-          {
-            "type": "string",
-            "name": "userId",
-            "in": "path",
-            "required": true,
-            "x-nullable": false
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": ""
-          }
-        }
-      }
-    },
     "/users": {
       "get": {
         "tags": [
-          " (User)"
+          "User"
         ],
-        "operationId": "16279A195315AE45C6D7DCDD49275F940455E0ECFBD582E04C82B0B802DE5ED8",
+        "operationId": "UserFindAllQuery",
         "produces": [
           "application/json"
         ],
@@ -222,9 +110,9 @@
       },
       "post": {
         "tags": [
-          " (User)"
+          "User"
         ],
-        "operationId": "F9655EF6DEA626E2F711E7501179181502C235D957F824040EB6E124EAE2D277",
+        "operationId": "UserCreateCommand",
         "produces": [
           "application/json"
         ],
@@ -235,7 +123,22 @@
             "in": "body",
             "description": "The user details",
             "schema": {
-              "$ref": "#/definitions/UserCreateCommand"
+              "allOf": [
+                {
+                  "$ref": "#/definitions/CommandBaseOfUserCreateCommandResponse"
+                },
+                {
+                  "type": "object",
+                  "properties": {
+                    "firstName": {
+                      "type": "string"
+                    },
+                    "lastName": {
+                      "type": "string"
+                    }
+                  }
+                }
+              ]
             }
           }
         ],
@@ -320,9 +223,9 @@
     "/users/{userId}": {
       "get": {
         "tags": [
-          " (User)"
+          "User"
         ],
-        "operationId": "8D651D9EC929ED7674E0CBE4AB51213E717C51FA60F7A665D5392AB0E33AF9BF",
+        "operationId": "UserFindByIdQuery",
         "produces": [
           "application/json"
         ],
@@ -415,9 +318,9 @@
       },
       "put": {
         "tags": [
-          " (User)"
+          "User"
         ],
-        "operationId": "9EB82EA79756145AEB8F49942FA4BB71B7CBDBAD559E53C9E6D2D79048ABD329",
+        "operationId": "UserUpdateCommand",
         "produces": [
           "application/json"
         ],
@@ -432,7 +335,25 @@
             "name": "UserUpdateCommand",
             "in": "body",
             "schema": {
-              "$ref": "#/definitions/UserUpdateCommand"
+              "allOf": [
+                {
+                  "$ref": "#/definitions/CommandBase"
+                },
+                {
+                  "type": "object",
+                  "properties": {
+                    "userId": {
+                      "type": "string"
+                    },
+                    "firstName": {
+                      "type": "string"
+                    },
+                    "lastName": {
+                      "type": "string"
+                    }
+                  }
+                }
+              ]
             }
           }
         ],
@@ -516,6 +437,31 @@
     }
   },
   "definitions": {
+    "ProblemDetails": {
+      "type": "object",
+      "properties": {
+        "type": {
+          "type": "string"
+        },
+        "title": {
+          "type": "string"
+        },
+        "status": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "detail": {
+          "type": "string"
+        },
+        "instance": {
+          "type": "string"
+        },
+        "extensions": {
+          "type": "object",
+          "additionalProperties": {}
+        }
+      }
+    },
     "User": {
       "type": "object",
       "properties": {
@@ -529,6 +475,14 @@
           "type": "string"
         },
         "fullName": {
+          "type": "string"
+        }
+      }
+    },
+    "UserCreateCommandResponse": {
+      "type": "object",
+      "properties": {
+        "userId": {
           "type": "string"
         }
       }
@@ -567,6 +521,9 @@
         }
       }
     },
+    "Unit": {
+      "type": "object"
+    },
     "UserUpdateCommand": {
       "allOf": [
         {
@@ -603,42 +560,6 @@
           "format": "date-time"
         }
       }
-    },
-    "ProblemDetails": {
-      "type": "object",
-      "properties": {
-        "type": {
-          "type": "string"
-        },
-        "title": {
-          "type": "string"
-        },
-        "status": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "detail": {
-          "type": "string"
-        },
-        "instance": {
-          "type": "string"
-        },
-        "extensions": {
-          "type": "object",
-          "additionalProperties": {}
-        }
-      }
-    },
-    "UserCreateCommandResponse": {
-      "type": "object",
-      "properties": {
-        "userId": {
-          "type": "string"
-        }
-      }
-    },
-    "Unit": {
-      "type": "object"
     }
   }
 }
